# Physical.Simulation.Tool.For.Android

./: .cproject  .gitignore  .project  AndroidManifest.xml  README.md  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/sfs/physicalsimulationtool/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Controller.cpp  Controller.h  Log.h  Main.cpp
app/src/main/cpp/collision/: Contact.h  ContactResolver.h
app/src/main/cpp/common/: Defines.h  Utils.h
app/src/main/cpp/engine/: MainEngine.cpp  MainEngine.h  NDC.h  Selection.h
app/src/main/cpp/graphic/: CommonGraphics.h  MainGraphic.h
app/src/main/cpp/physics/: MainPhysics.cpp
app/src/main/java/edu/physicalsimulationtool/: SimulationActivity.java  SimulationGLSurfaceView.java  SimulationGLSurfaceViewRendered.java
app/src/main/res/layout/: simulation_activity.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sfs/physicalsimulationtool/: ExampleUnitTest.java
jni/: Android.mk  Application.mk  Controller.cpp  Controller.h  Main.cpp
jni/common/: Utils.cpp
jni/library.collision/: Contact.cpp  MainCollision.h  Octree.h
jni/library.graphic/: MainGraphic.cpp  Shader.cpp
jni/library.physics/: ForceGenerators.cpp  ForceGenerators.h  MainPhysics.h
jni/physics.engine/: MainEngine.h
res/layout/: simulation.xml
res/menu/: simulation_menu.xml
res/values/: labels.xml  messages.xml  strings.xml
src/edu/physicalSimulationTool/: CallNativeController.java  SimulationActivity.java  SimulationGLSurfaceView.java  (+1 more)
